--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -1,31 +1,124 @@
 body{
-    background-color:tomato;
+    background-color: rgba(255, 60, 0, 0.863);
 }
 img{
-    width: 250px;
-    height: 200;
+    width: 500px;
+    height: 400;
+
+}
+#img1{
+    width: 300px;
+    height: 300px;
     border-radius: 81px;
+    
+}
+#boton{
+    color:rgb(0, 255, 170);
+    background-color: aquamarine;
+    font-family: Arial;
+    font-size: large;
+    padding:2cm;
+    border-radius: 10cm;
+    color: black;
+    cursor: all-scroll;
+
+} 
+#boton:hover{
+    background-color: blueviolet;
 }
 nav{
-     background-color: pink;
-     color: honeydew;
-     text-align: center;
+    background-color: rgb(0, 0, 0);
+    color: rgb(243, 240, 255);
+    text-align: center;
+    font-size: 25px;
 }
 li{
-    list-style:none
+    list-style:none;
 }
-nav ul li{
-    display:list-item;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 22;    
+nav ol li{
+    display: inline;
+    font-family:'Times New Roman', Times, serif;
+    font-size: 25px;
 }
 a{
-    color:cadetblue;
+    color: aquamarine;
     text-decoration: none;
 }
-nav ul li a{
-    padding: 20 px;
+nav ol li{
+    padding:40px;
 }
-a:hover {
-    background-color: darkviolet;
+a:hover{
+    background-color: rgb(206, 118, 118);
+}
+nav ul li a:hover{
+    background-color: aquamarine;
+    color:aliceblue;
+}
+
+/*Estilos para el menu principal */
+nav ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+}
+nav ul li {
+    position: relative; /* necesariop para el submenu*/
+}
+nav ul li a {
+    color: rgb(240, 240, 240);
+    text-decoration:none;
+    padding: 10px 10px;
+    font-size: 20px;
+    display: block;
+    background-color: rgba(255, 0, 0, 0.781);
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+nav ul li a:hover {
+    background-color: rgba(192, 192, 192, 0.637);
+}
+nav ul li.opcion-submenu .submenu {
+    display: none;
+    position: absolute;
+    background-color: rgba(255, 230, 230, 0.623);
+    border-radius: 5px;
+}
+nav ul li.opcion-submenu:hover .submenu {
+    display: block;
+}
+nav ul li .submenu li a {
+    font-size: 15px;
+    color: rgba(201, 204, 206, 0.829);
+    display: block;
+}
+nav ul li .submenu li a:hover {
+    background-color: rgb(12, 116, 116);
+}
+img{
+    display: block;
+    margin: auto;
+}
+section{
+    padding: 20px;
+    text-align:center;
+}
+.imagenes{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+.imagenes img{
+    width: 300px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
+    transition: transform 0.3s ease;
+}
+.imagenes img:hover{
+    transform: scale(1.5);
+}
+tr:hover {
+    background-color: tomato;
 }
